--- a/.github/workflows/tfsec.yml
+++ b/.github/workflows/tfsec.yml
@@ -21,6 +21,8 @@ jobs:
         with:
           github_token: ${{ github.token }}
 
+      - name: Terraform security scan
+        uses: aquasecurity/tfsec-action@v1.0.0
       # - name: Terraform security scan
       #   uses: aquasecurity/tfsec-action@v1.0.0
       #   env:
