--- a/.github/workflows/tfsec.yml
+++ b/.github/workflows/tfsec.yml
@@ -20,14 +20,8 @@ jobs:
         uses: aquasecurity/tfsec-pr-commenter-action@v1.0.2
         with:
           github_token: ${{ github.token }}
-          soft_fail_commenter: true
-          working_directory: .
 
-      # - name: Terraform security scan
-      #   uses: aquasecurity/tfsec-action@v1.0.0
-      #   with:
-      #     format: json
-      # - name: Terraform security scan
-      #   uses: aquasecurity/tfsec-action@v1.0.0
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Terraform security scan
+        uses: aquasecurity/tfsec-action@v1.0.0
+        with:
+          format: json
