--- a/.github/workflows/tfsec.yml
+++ b/.github/workflows/tfsec.yml
@@ -20,8 +20,13 @@ jobs:
         uses: aquasecurity/tfsec-pr-commenter-action@v1.0.2
         with:
           github_token: ${{ github.token }}
+          soft_fail_commenter: true
 
-      - name: Terraform security scan
-        uses: aquasecurity/tfsec-action@v1.0.0
-        with:
-          format: json
+      # - name: Terraform security scan
+      #   uses: aquasecurity/tfsec-action@v1.0.0
+      #   with:
+      #     format: json
+      # - name: Terraform security scan
+      #   uses: aquasecurity/tfsec-action@v1.0.0
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
