--- a/.github/workflows/tfsec.yml
+++ b/.github/workflows/tfsec.yml
@@ -16,17 +16,13 @@ jobs:
       - name: Clone repo
         uses: actions/checkout@master
 
-      - name: tfsec
-        uses: aquasecurity/tfsec-pr-commenter-action@v1.0.2
+      - name: Pull Request Commenter
+        if: ${{ github.event_name == 'pull_request' }}
+        uses: aquasecurity/tfsec-pr-commenter-action@main
         with:
-          github_token: ${{ github.token }}
-          soft_fail_commenter: true
+          github_token: ${{ secrets.GITHUB_TOKEN }}
 
-      # - name: Terraform security scan
-      #   uses: aquasecurity/tfsec-action@v1.0.0
-      #   with:
-      #     format: json
-      # - name: Terraform security scan
-      #   uses: aquasecurity/tfsec-action@v1.0.0
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Terraform security scan
+        uses: aquasecurity/tfsec-action@main
+        with:
+          format: json
